--- a/.gitignore
+++ b/.gitignore
@@ -3,14 +3,14 @@
 .DS_Store
 airflow_settings.yaml
 __pycache__/
-astro
+.astro
 .venv
 airflow-webserver.pid
 webserver_config.py
 airflow.cfg
 airflow.db
 
-.dockerignore
+
 dags/airflowignore
 include
 plugins
